:sparkles: Min clothes by category when creating dressing & number input

--- a/resources/js/locales/fr.json
+++ b/resources/js/locales/fr.json
@@ -130,5 +130,8 @@
     "vue_densemble": "Vue d'ensemble",
     "tu_nas_pas_configur_de_minimum_par_catgorie": "Tu n'as pas configuré de minimum par catégorie",
     "il_faut_que_tu_indique_combien_de_vtement_au_minim": "Il faut que tu indique combien de vêtement au minimum il faut dans ce dressing pour qu'on t'aide à faire ta valise.",
-    "configurer_le_dressing": "Configurer le dressing"
+    "configurer_le_dressing": "Configurer le dressing",
+    "dfinit_le_minimum_de_vtement_quil_te_faut_dans_ce": "Définit le minimum de vêtement qu'il te faut dans ce dressing. Nous pouvons ainsi t'aider à faire ta valise en t'indiquant ce qu'il te manque.",
+    "enlever_step": "Enlever {stepBy}",
+    "ajouter_step": "Ajouter {stepBy}"
 }
