--- a/resources/js/locales/fr.json
+++ b/resources/js/locales/fr.json
@@ -133,5 +133,7 @@
     "configurer_le_dressing": "Configurer le dressing",
     "dfinit_le_minimum_de_vtement_quil_te_faut_dans_ce": "Définit le minimum de vêtement qu'il te faut dans ce dressing. Nous pouvons ainsi t'aider à faire ta valise en t'indiquant ce qu'il te manque.",
     "enlever_step": "Enlever {stepBy}",
-    "ajouter_step": "Ajouter {stepBy}"
+    "ajouter_step": "Ajouter {stepBy}",
+    "afficher_le_rsum": "Afficher le résumé",
+    "afficher_les_images": "Afficher les images"
 }
