--- a/resources/js/locales/fr.json
+++ b/resources/js/locales/fr.json
@@ -136,5 +136,6 @@
     "ajouter_step": "Ajouter {stepBy}",
     "afficher_le_rsum": "Afficher le résumé",
     "afficher_les_images": "Afficher les images",
-    "dressing_inconnu": "Dressing inconnu"
+    "dressing_inconnu": "Dressing inconnu",
+    "slectionner_une_categorie": "Sélectionner une catégorie"
 }
