--- a/resources/js/locales/fr.json
+++ b/resources/js/locales/fr.json
@@ -123,6 +123,7 @@
     "preferences": "Préférences",
     "personnaliser_les_categories_de_vos_vetements_pour_tous_vos_dressings": "Personnalisez les catégories de vos vêtements pour tous vos dressings.",
     "optionnel": "optionnel",
+    "optionnelle": "optionnelle",
     "tu_peux_configurer_le_minimum_de_vtement_pour_chaque": "Tu peux configurer le minimum de vêtement pour chaque catégorie",
     "modifier_la_catgorie": "Modifier la catégorie",
     "modifier_la_catgorie_name": "Modifier la catégorie {name}",
@@ -137,5 +138,6 @@
     "afficher_le_rsum": "Afficher le résumé",
     "afficher_les_images": "Afficher les images",
     "dressing_inconnu": "Dressing inconnu",
-    "slectionner_une_categorie": "Sélectionner une catégorie"
+    "slectionner_une_categorie": "Sélectionner une catégorie",
+    "photo": "Photo"
 }
