:sparkles: Reorder categories (#10)

--- a/resources/js/locales/fr.json
+++ b/resources/js/locales/fr.json
@@ -139,5 +139,6 @@
     "afficher_les_images": "Afficher les images",
     "dressing_inconnu": "Dressing inconnu",
     "slectionner_une_categorie": "Sélectionner une catégorie",
-    "photo": "Photo"
+    "photo": "Photo",
+    "rordonner": "Réordonner"
 }
