:sparkles: (#13) Edit minimum by category on the fly in suitcase

--- a/resources/js/locales/fr.json
+++ b/resources/js/locales/fr.json
@@ -98,13 +98,13 @@
     "jai_fini_ma_valise": "J'ai fini ma valise",
     "quitter": "Quitter",
     "ajouter_les_vtements_manquants": "Ajouter les vêtements manquants",
-    "ce_quil_faut_mettre_dans_ta_valise": "Ce qu'il faut mettre dans ta valise",
+    "ce_quil_faut_mettre_dans_ta_valise": "Ce qu'il faut mettre dans ta valise au minimum",
     "voir_le_dressing": "Voir le dressing",
     "tu_as_dj_tout_ce_quil_faut_lbas": "Tu as déjà tout ce qu'il faut là-bas !",
     "ce_quil_doit_y_avoir_dans_ta_valise": "Ce qu'il doit y avoir dans ta valise",
     "il_ny_a_pas_assez_de_clothing_dans_ce_dressing": "Il n'y a pas assez de {clothing} dans ce dressing.",
     "peuttre_que_tu_nas_pas_tout_ajout_sur_lapplication": "Peut-être que tu n'as pas tout ajouté sur l'application ?",
-    "slectionne_n_clothing": "Sélectionne {n} {clothing}",
+    "slectionne_n_clothing": "Sélectionne au moins {n} {clothing} que tu ajoutes à ta valise",
     "modifier_lorigine_ou_la_destination": "Modifier l'origine ou la destination",
     "tu_nen_as_que_n": "tu n'en a aucun | tu n'en a qu'un | tu n'en as que {n}",
     "je_commence_ma_valise": "Je commence ma valise",
@@ -140,5 +140,14 @@
     "dressing_inconnu": "Dressing inconnu",
     "slectionner_une_categorie": "Sélectionner une catégorie",
     "photo": "Photo",
-    "rordonner": "Réordonner"
+    "rordonner": "Réordonner",
+    "valider": "Valider",
+    "ce_quil_y_a_dans_ta_valise": "Ce qu'il y a dans ta valise",
+    "ce_quil_faut_mettre_dans_ta_valise": "Ce qu'il faut mettre dans ta valise",
+    "ce_quil_faut_l_o_tu_vas_auminimum": "Ce qu'il faut là où tu vas (au minimum)",
+    "selon_le_minimum_par_catgorie_que_tu_as_configur_i": "Selon le minimum par catégorie que tu as configuré, il faut que tu <b>emmènes au moins</b>:",
+    "continuer_avec_a": "Continuer avec ça",
+    "modifier_pour_cette_foisci": "Modifier pour cette fois-ci",
+    "si_tous_tes_vtements_sont_bien_sur_lapplication_pr": "Si tous tes vêtements sont bien sur l'application, prends-tout et continue",
+    "terminer_la_valise": "Terminer la valise"
 }
